Adjust layout to avoid sub-pixel alignment problems

--- a/circuit.css
+++ b/circuit.css
@@ -49,9 +49,15 @@ body {
     width: auto;
     min-width: 8em;
     background-color: #eee;
+    z-index:4;
+}
+#truthborder {
+    top: 0;
+    left: 0;
+    height: auto;
+    width: auto;
     border-style: none solid solid none;
     border-width: thin;
-    z-index:4;
     text-align: center;
 }
 #info {
@@ -88,16 +94,23 @@ body {
     width: 8em;
     height: 100%;
     background-color: #eee;
+    z-index: 2;
+}
+#cbox_border {
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: auto;
     border-right-style: dotted;
     border-width: thin;
-    z-index: 2;
 }
 #cbox_scroll {
     top: 0;
     left: 0;
-    width: 8em;
+    width: 100%;
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
     background-color: #d0ffd0;
 }
 #cbox {
@@ -109,8 +122,8 @@ body {
 }
 #cdraw {
     position: fixed;
-    bottom: 0;
-    right: 0;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
     z-index: 1;
